crates/mermaid-text/tests/snapshots/snapshots__sequence_with_note_over_pair.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌────────┐             ┌───────┐
 │  User  │             │  API  │
 └────────┘             └───────┘
      ┆                     ┆
     ╭───────────────────────╮
     │ Authentication flow   │
     ╰───────────────────────╯
      ┆ POST /login         ┆
      ──────────────────────▸
      ┆                     ┆
