crates/mermaid-text/tests/snapshots/snapshots__sequence_with_note_right_of.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌────────┐             ┌───────┐
 │  User  │             │  API  │
 └────────┘             └───────┘
      ┆ POST /login         ┆
      ──────────────────────▸
      ┆                     ┆
      ┆ ╭─────────────────────╮
      ┆ │ token cached for 1h │
      ┆ ╰─────────────────────╯
      ┆ 200 OK              ┆
      ◂──────────────────────
      ┆                     ┆
