crates/mermaid-text/tests/snapshots/snapshots__sequence_with_par_and_critical_blocks.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌──────┐       ┌──────┐
 │  A   │       │  B   │
 └──────┘       └──────┘
     ┆              ┆
╔═[par: first]═══════════╗
║    ┆ msg1         ┆    ║
║    ───────────────▸    ║
║    ┆              ┆    ║
╠┄[second]┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╣
║    ┆ msg2         ┆    ║
║    ───────────────▸    ║
║    ┆              ┆    ║
╚════════════════════════╝
     ┆              ┆
╔═[critical: primary]════╗
║    ┆ try          ┆    ║
║    ───────────────▸    ║
║    ┆              ┆    ║
╠┄[failure]┄┄┄┄┄┄┄┄┄┄┄┄┄┄╣
║    ┆ retry        ┆    ║
║    ───────────────▸    ║
║    ┆              ┆    ║
╚════════════════════════╝
     ┆              ┆
