crates/mermaid-text/tests/snapshots/snapshots__state_circuit_breaker.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
╭─────╮
│( ● )│
╰─────╯
   │
   │
   │
   │
   │
   └──────────────────────────────┐
╭────────────────────────────────╮│
│ One probe call allowed through ├◂───────────────────────────────────────────────┐
╰────────────────────────────────╯│                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │probe fails (increased backoff)                               │
                 │probe succeeds  │                                               │
                 │ │              │                                               │probe interval elapsed
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 │ │              │                                               │
                 └┐└──────────────┼─────────────────────────┐                     │
                ▾─▾───────────────┼───────────────────────▾ ▾                     │
╭───────────────────────────────╮ │╭─────────────────────────────────────────────╮│
│   All DB calls pass through   │ │5 DB calls skipped (sleep for probe interval) ││
│ Counting consecutive failures │ ││             No writes attempted             ├┤
╰───────────────────────────────╯ │╰─────────────────────────────────────────────╯
                ──────────────────┘
