crates/mermaid-text/tests/snapshots/snapshots__state_composite_keyboard_lock.snap
---
source: crates/mermaid-text/tests/snapshots.rs
assertion_line: 817
expression: out
---
 ╭─Active──────────────────────────────────────────────────╮
 │┌──────────────────────────EvNumLockPressed─────────────┐│
 ││╭────────────╮                           ╭───────────╮ ││
 │││ NumLockOff │──────────────────────────▸│ NumLockOn │ ││
 ││╰──────▴─────╯                           ╰───────────╯ ││
 │└───────┘                                       ┘───────┘│
 │ EvNumLockPressed                                        │
 │                            EvCapsLockPressed            │
 │ ╭─────────────╮                          ╭────────────╮ │
 │ │ CapsLockOff │─────────────────────────▸│ CapsLockOn │ │
 │ ╰──────▴──────╯     EvCapsLockPressed    ╰────────────╯ │
 │        └────────────────────────────────────────┘       │
 ╰─────────────────────────────────────────────────────────╯
