crates/mermaid-text/tests/snapshots/snapshots__state_composite_simple.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
╭─Active───────────────────────────────╮
│                                      │
│ ╭─────╮      ╭───────╮      ╭──────╮ │
│ │( ● )│─────▸│ Inner │─────▸│ Done │ │
│ ╰─────╯      ╰───────╯      ╰──────╯ │
│                                      │
╰──────────────────────────────────────╯
