crates/mermaid-text/tests/snapshots/snapshots__state_composite_with_external_edges.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
╭─Active────────────────────╮
│                           │
│ ╭─────────╮      ╭──────╮ │
│ │ Working │─────▸│ Idle │ │
│ ╰────▴────╯      ╰───┬──╯ │
│      └───────────────┴    │
╰───────────────────────────╯
