crates/mermaid-text/tests/snapshots/snapshots__state_diagram_classdef.snap
---
source: crates/mermaid-text/tests/snapshots.rs
assertion_line: 594
expression: out
---
               [38;2;153;204;255m╭─Active──────────────────────────────────────────╮[0m[0m
               [38;2;153;204;255m│[0m                                                 [0m[38;2;153;204;255m│[0m[0m
╭─────╮        [38;2;153;204;255m│[0m ╭─────╮       ╭──────╮      start   ╭─────────╮ [0m[38;2;153;204;255m│[0m[0m
(  ●  )────────[38;2;153;204;255m┼[0m▸(  ●  )──────▸│ Idle │─────────────▸│[0m[38;2;255;255;255m[48;2;255;0;0m Working [0m│ [0m[38;2;153;204;255m│[0m[0m
╰─────╯        [38;2;153;204;255m│[0m ╰─────╯       ╰───▴──╯       done   ╰─────────╯ [0m[38;2;153;204;255m│[0m[0m
               [38;2;153;204;255m│[0m                   └──────────────────────┘      [0m[38;2;153;204;255m│[0m[0m
               [38;2;153;204;255m╰─────────────────────────────────────────────────╯[0m[0m
