crates/mermaid-text/tests/snapshots/snapshots__state_diagram_fork_in_tb_uses_horizontal_bar.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
╭─────╮
│( ● )│
╰─────╯
   │
   │
   │
   │
   │
  ▾┘
━━━━━
  │ │
  │ │
  │ │
  │ │
  │ │
  ▾ └────▾
╭───╮  ╭───╮
│ A │  │ B │
╰───╯  ╰───╯
