crates/mermaid-text/tests/snapshots/snapshots__state_diagram_special_shapes.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
╭─────╮      ┌─────◇────┐          ┃      ╭─────────╮      ┃      ╭───────╮
│( ● )│─────▸│ Decision │─────────┐┃     ▸│ Branch1 │─────┐┃      │╭─────╮│
╰─────╯      └─────◇────┘────positive────┘╰─────────╯     ▸┃────┐▸││  ●  ││
                                 │ ┃                       ┃    │││╰─────╯│
                                 │ ┃────┐┌────────────────▸┃    └▸╰───────╯
                                 └──────┼┘╭─────────╮     ├──────┘
                                        └▸│ Branch2 │─────┘  negative
                                          ╰─────────╯
