crates/mermaid-text/tests/snapshots/snapshots__state_diagram_with_multiline_note.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---


╭─────╮
(  ●  )────────────────────────┐
╰─────╯                        │
                               │╭──────╮     ╭─────────╮
                               ▸│ Idle │────▸│ Working │
                               ─╰──────╯     ╰─────────╯
╭─────────────────────────╮    ┆
│  worker pool size = 4   │    ┆
│ shared with retry queue │┄┄┄┄┘
╰─────────────────────────╯
